Fixed white space in schedule, fixed headers size

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -13,13 +13,14 @@
 }
 
 .title {
-    font-size: 5vw;
+   font-size: 48px;
     position: relative;
     margin: 0 auto;
     padding: $padding $padding 0 $padding;
     text-align: center;
     text-transform: uppercase;
     color: $header-color;
+    
 }
 
 /*photo background for letters*/
